--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -18,26 +18,31 @@ div {
 }
 
 /* ---------------------------------- */
+/* ORBIT CONTAINER - handles positioning and orbit path */
+/* ---------------------------------- */
+.orbit-container {
+    position: absolute;
+    top: var(--orbit-center-y);
+    left: var(--orbit-center-x);
+    transform: translate(-50%, -50%); /* Centers the container on its top/left position */
+}
+
+/* ---------------------------------- */
 /* MERCURY PROPERTIES           */
 /* ---------------------------------- */
 .MERCURY {
-    /* Orbiting Container */
+    /* Orbiting Planet */
     --orbit-radius: 100px;
     --orbit-speed: 5s;
     --orbit-center-x: 50%;
     --orbit-center-y: 50%;
     
-    position: absolute;
-    top: var(--orbit-center-y);
-    left: var(--orbit-center-x);
-    transform-origin: 0 0;
-    transform: translate(-50%, -50%);
     animation: orbit-animation var(--orbit-speed) linear infinite;
 }
 
 .mercury-globe {
     /* Globe Properties */
-    --r: 1; /* SPHERE RADIUS */
+    --r: 1vmin; /* SPHERE RADIUS */
     --u: 1vmin;
     --h: 2px;
     
@@ -79,23 +84,19 @@ div {
 /* SUN PROPERTIES             */
 /* ---------------------------------- */
 .SUN {
-    /* Orbiting Container */
+    /* Orbiting Planet */
     --orbit-radius: 0px;
     --orbit-speed: 5s;
     --orbit-center-x: 80%;
     --orbit-center-y: 50%;
-    
-    position: absolute;
-    top: var(--orbit-center-y);
-    left: var(--orbit-center-x);
-    transform-origin: 0 0;
-    transform: translate(-50%, -50%);
-    animation: none;
+
+    /* This now enables the sun's orbit animation */
+    animation: orbit-animation var(--orbit-speed) linear infinite;
 }
 
 .sun-globe {
     /* Globe Properties */
-    --r: 20; /* SPHERE RADIUS */
+    --r: 20vmin; /* SPHERE RADIUS */
     --u: 1vmin;
     --h: 2px;
     
@@ -177,9 +178,9 @@ div {
 }
 @keyframes orbit-animation {
     from {
-        transform: rotate(0deg) translate(calc(var(--orbit-radius) * -1), 0);
+        transform: rotate(0deg) translateX(calc(var(--orbit-radius) * -1));
     }
     to {
-        transform: rotate(360deg) translate(calc(var(--orbit-radius) * -1), 0);
+        transform: rotate(360deg) translateX(calc(var(--orbit-radius) * -1));
     }
 }
