--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -82,12 +82,12 @@ div {
     /* Orbiting Container */
     --orbit-radius: 0px;
     --orbit-speed: 5s;
-    --orbit-center-x: 80%;
+    --orbit-center-x: 50%;
     --orbit-center-y: 50%;
     
     position: absolute;
-    top: var(--orbit-center-y);
-    left: var(--orbit-center-x);
+    top: 50%;
+    left: 50%;
     transform-origin: 0 0;
     transform: translate(-50%, -50%);
     animation: none;
