--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -86,11 +86,11 @@ div {
     --orbit-center-y: 50%;
     
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: var(--orbit-center-y);
+    left: var(--orbit-center-x);
     transform-origin: 0 0;
     transform: translate(-50%, -50%);
-    animation: none;
+    animation:  orbit-animation var(--orbit-speed) linear infinite;
 }
 
 .sun-globe {
