--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -31,6 +31,16 @@
 {% for line in negative_lines %}
 <div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h sun-h"></div>
 {% endfor %}
+
+<div class="VENUS">
+<div style="--t: {{ t2_plus_1 }}" class="venus-globe">
+<div style="--c: {{ t }}" class="line radius h venus-h"></div>
+{% for line in positive_lines %}
+<div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h venus-h"></div>
+{% endfor %}
+{% for line in negative_lines %}
+<div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h venus-h"></div>
+{% endfor %}
 </div>
 </div>
 </div>
