--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -25,6 +25,7 @@ div {
     top: var(--orbit-center-y);
     left: var(--orbit-center-x);
     transform-origin: 0 0;
+    transform: translate(-50%, -50%); /* Center the container itself */
     animation: orbit-animation var(--orbit-speed) linear infinite;
 }
 /* GLOBE - This element is a child of the orbit container and handles its own rotation */
@@ -240,6 +241,7 @@ div {
     top: var(--orbit-center-y);
     left: var(--orbit-center-x);
     transform-origin: 0 0;
+    transform: translate(-50%, -50%); /* Center the container itself */
     animation: orbit-animation var(--orbit-speed) linear infinite;
 }
 /* GLOBE - This element is a child of the orbit container and handles its own rotation */
