--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -8,8 +8,12 @@
 <link rel="stylesheet" href="{% static 'webapp/test_for_animation.css' %}">
 <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
 </head>
+
 <body>
-<div class="planets-container">
+<div id="explain_box">$
+<h1>Hello everyone !</h1>
+</div>
+<div id="solar_system" class="planets-container">
 
 <div class="MERCURY">
 <div style="--t: {{ t2_plus_1 }}" class="mercury-globe">
