--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -10,6 +10,7 @@ body {
     overflow: hidden;
     font-family:'Orbitron', sans-serif;
     color:white;
+    position:relative;
 }
 div {
     transform-style: preserve-3d;
@@ -20,6 +21,12 @@ div {
     margin-top:200px;
     overflow-y: scroll;
     max-height: 1080px;
+}
+#explain_box {
+    position:absolute;
+    top:5%;
+    left:50%;
+    transform:translate(-50%, -50%);
 }
 /* ORBITING CONTAINER - This element handles the revolution around a central point */
 .MERCURY {
